--- a/css/base.css
+++ b/css/base.css
@@ -91,7 +91,10 @@ section {
 .h3 {
   color: rgb(34, 31, 31);
 }
-a {
+a:link {
   text-decoration: none;
-  color: rgb(233, 225, 225);
+  color: var(--global-color);
+}
+a:visited {
+  color: var(--global-blue);
 }
