--- a/css/base.css
+++ b/css/base.css
@@ -61,7 +61,7 @@ img {
 
 /* section */
 section {
-  padding: 8rem 0;
+  padding: 3rem 0;
 }
 
 /* border background */
@@ -137,4 +137,29 @@ a {
     width: 90%;
     margin: 0 auto;
   }
+}
+
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.box-3-col {
+  background-color: #fff;
+  flex: 0 1 375px;
+  box-shadow: -1px 14px 32px -10px rgba(0, 0, 0, 0.61);
+  margin-bottom: 4.5rem;
+  position: relative;
+}
+
+.box-4-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1 1 300px;
+  padding: 2rem;
+  margin-bottom: 1rem;
+  position: relative;
 }
