--- a/css/footer.css
+++ b/css/footer.css
@@ -7,19 +7,18 @@
   padding-top: 3rem;
   padding-bottom: 2rem;
 }
-.footer-boxes .box {
-  flex: 0 1 25%;
+.footer-boxes .box-4-col {
+  align-items: flex-start;
 }
-.footer-boxes .box:not(:last-child) {
+.footer-boxes .box-4-col:not(:last-child) {
   padding-right: 2rem;
 }
 .footer-boxes .box ul {
   list-style-type: none;
 }
-.footer-boxes .box h4 {
+.footer-boxes .box-4-col h4 {
   color: #fff;
   text-transform: uppercase;
-  padding-top: 3rem;
   padding-bottom: 1.5rem;
   font-weight: 400;
 }
@@ -31,7 +30,7 @@
   padding-bottom: 2rem;
 }
 .footer-boxes .box-3 li:not(:last-child) {
-  border-bottom: 1.5px solid rgb(53, 51, 51);
+  border-bottom: 1.5px solid rgb(48, 48, 48);
   padding-bottom: 0.5rem;
   margin-bottom: 1rem;
 }
@@ -109,11 +108,17 @@
   top: 100%;
   left: 0;
 }
+.copyright {
+  font-size: calc(0.2vw + 12px);
+}
 .footer-copyright-social-media .up-arrow {
   flex: 0 1 10%;
-  font-size: 3rem;
   align-self: center;
   justify-content: flex-end;
   display: flex;
   padding-right: 2rem;
+}
+.footer-social li,
+.fa-arrow-circle-up {
+  font-size: calc(1.3vw + 13px);
 }
