--- a/css/recent-work.css
+++ b/css/recent-work.css
@@ -14,6 +14,13 @@
   left: 0;
 }
 
+.recent-work-boxes .box-1,
+.recent-work-boxes .box-2,
+.recent-work-boxes .box-3 {
+  background: #fff;
+  box-shadow: -1px 14px 32px -10px rgba(0, 0, 0, 0.61);
+}
+
 .recent-work-boxes .box-3-col h4 {
   color: var(--dark-color);
   padding: 1.2rem 2rem 0 2rem;
