--- a/css/testimonial-development.css
+++ b/css/testimonial-development.css
@@ -1,23 +1,26 @@
 .testimonial-hr {
-  flex: 0 1 66%;
+  flex: 0 1 800px;
 }
 .development-hr {
-  flex: 0 1 32%;
+  flex: 0 1 400px;
 }
-
-.testimonial-boxes .box {
-  background-color: #fff;
-  flex: 0 1 48%;
+.top {
+  margin-bottom: 4.5rem;
+}
+.top,
+.bottom {
+  background: #fff;
+  box-shadow: -1px 14px 32px -10px rgba(0, 0, 0, 0.61);
   position: relative;
 }
-*/ .testimonial-boxes .box::after {
+.top::after,
+.bottom::after {
   content: '';
   position: absolute;
   width: 0;
   height: 0;
   border-top: solid 45px white;
   border-right: solid 45px transparent;
-  /* box-shadow: -1px 2px 35px -10px rgba(0, 0, 0, 0.61); */
   top: 100%;
   left: 0;
 }
@@ -32,12 +35,7 @@
   padding: 0.2rem 2rem 3rem 2rem;
 }
 
-/*== DEVELEOPMENT ==*/
-.tabs {
-  flex: 0 1 32%;
-  position: relative;
-  clear: both;
-}
+/*== DEVELOPMENT ==*/
 
 .tabs .tab {
   float: left;
@@ -50,7 +48,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 2rem;
+  padding: 1.76rem;
 }
 .tabs .tab .content .development-button {
   align-self: flex-end;
